third_party/move/move-vm/transactional-tests/tests/trusted_code/call_into_trusted.baseline.exp
processed 4 tasks
task 0 lines 1-6:  publish [module 0x9::trusted]
Error: Unable to publish module '0000000000000000000000000000000000000000000000000000000000000009::trusted'. Got VMError: {
    major_status: RET_TYPE_MISMATCH_ERROR,
    sub_status: None,
    location: 0x9::trusted,
    indices: [(FunctionDefinition, 0)],
    offsets: [(FunctionDefinitionIndex(0), 1)],
}
task 1 lines 8-25:  publish [module 0x99::not_trusted]
Error: error: unknown module `0000000000000000000000000000000000000000000000000000000000000009::trusted`
   ┌─ test:13:5
   │
13 │     call trusted::g
   │     ^^^^^^^^^^^^^^^

error: unknown module `0000000000000000000000000000000000000000000000000000000000000009::trusted`
   ┌─ test:18:5
   │
18 │     call trusted::g
   │     ^^^^^^^^^^^^^^^


task 2 lines 28-28:  run --verbose 0x99::not_trusted::checks_parameter_types
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000000099::not_trusted doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}
task 3 lines 30-30:  run --verbose 0x99::not_trusted::checks_return_types
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000000099::not_trusted doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}
